# hnchain

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/hn-cli/: Cargo.toml
crates/hn-cli/src/: lib.rs
crates/hn-consensus/: Cargo.toml
crates/hn-consensus/src/: lib.rs
crates/hn-core/: Cargo.toml
crates/hn-core/src/: chain.rs  epoch.rs  error.rs  height.rs  length.rs  lib.rs  nonce.rs  round.rs  time.rs  version.rs
crates/hn-crypto/: Cargo.toml
crates/hn-crypto/src/: lib.rs
crates/hn-hncs/: Cargo.toml
crates/hn-hncs/src/: lib.rs
crates/hn-network/: Cargo.toml
crates/hn-network/src/: lib.rs
crates/hn-node/: Cargo.toml
crates/hn-node/src/: lib.rs
crates/hn-rpc/: Cargo.toml
crates/hn-rpc/src/: lib.rs
crates/hn-state/: Cargo.toml
crates/hn-state/src/: lib.rs
crates/hn-storage/: Cargo.toml
crates/hn-storage/src/: lib.rs
docs/: LICENSE.md  README.md
docs/adr/: ADR-0000-protocol-invariants.md  ADR-0001-account-state-model.md  ADR-0002-cryptographic-identity.md  ADR-0003-address-format.md  ADR-0004-canonical-serialization.md  ADR-0005-hash-algorithms.md  ADR-0006-transaction-format.md  ADR-0007-state-tree.md  ADR-0008-block-format.md  ADR-0009-consensus-architecture.md  ADR-0010-validator-set-model.md  ADR-0011-leader-election.md  ADR-0012-vote-messages-and-quorum-certificates.md  ADR-0013-finality-rules.md  ADR-0014-fork-choice-rules.md  ADR-0015-slashing-and-accountability.md  ADR-0016-synchronization-checkpoints.md  ADR-0017-light-client-finality-proofs.md  ADR-0018-p2p-protocol-messages.md  ADR-0019-storage-state-interfaces.md  ADR-0020-implementation-language.md  ADR-0021-rust-workspace-policy.md
docs/developer/: README.md
docs/ecosystem/: README.md
docs/governance/: constitution.md
docs/hnip/: README.md
docs/hnvm/: README.md
docs/performance/: README.md
docs/rfc/: README.md
docs/rfc/api/: README.md
docs/rfc/cli/: README.md
docs/rfc/consensus/: README.md  consensus-architecture.md  finality-rules.md  fork-choice-rules.md  leader-selection.md  light-client-finality-proofs.md  slashing-and-accountability.md  synchronization-checkpoints.md  validator-set.md  vote-messages-and-quorum-certificates.md
docs/rfc/core/: README.md  primitive-types.md
docs/rfc/explorer/: README.md
docs/rfc/interoperability/: README.md
docs/rfc/networking/: README.md  p2p-protocol-messages.md
docs/rfc/rpc/: README.md
docs/rfc/sdk/: README.md
docs/rfc/storage/: README.md  storage-state-interfaces.md
docs/rfc/wallet/: README.md
docs/roadmap/: README.md
docs/security/: README.md
docs/specs/core/: account-state.md  address-format.md  block-format.md  canonical-serialization.md  cryptographic-identity.md  genesis.md  hash-algorithms.md  state-tree.md  transaction-format.md
docs/standards/: README.md
docs/whitepaper/: HNChain-Whitepaper-v0.1-draft.md
tests/conformance/: README.md
tests/conformance/core/: primitive-types-v0.1.json
tests/integration/: README.md
