[package]
name = "hn-consensus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HNChain consensus state machine boundaries."

[dependencies]
hn-core = { path = "../hn-core" }
hn-crypto = { path = "../hn-crypto" }
hn-state = { path = "../hn-state" }

[lints]
workspace = true
