[package]
name = "hn-hncs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HNChain canonical serialization implementation."

[dependencies]
hn-core = { path = "../hn-core" }

[lints]
workspace = true
