[package]
name = "hn-network"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HNChain P2P networking boundaries."

[dependencies]
hn-core = { path = "../hn-core" }
hn-crypto = { path = "../hn-crypto" }

[lints]
workspace = true
