[package]
name = "hn-rpc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HNChain RPC surface boundaries."

[dependencies]
hn-core = { path = "../hn-core" }
hn-node = { path = "../hn-node" }

[lints]
workspace = true
