[package]
name = "hn-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HNChain account state and state transition boundaries."

[dependencies]
hn-core = { path = "../hn-core" }
hn-crypto = { path = "../hn-crypto" }
hn-hncs = { path = "../hn-hncs" }

[lints]
workspace = true
